# cooperative-crosswords

./: Cargo.toml  README.md  build.sh
migrations/2023-04-19-130632_create_crossword/: down.sql  up.sql
migrations/2023-05-04-110423_create_solution/: down.sql  up.sql
src/: crossword_scraper.rs  main.rs  models.rs  schema.rs
src/models/: api_models.rs  db_models.rs  errors.rs  guardian.rs  mod.rs
src/services/: crossword_db_actions.rs  crossword_scraper.rs  crossword_service.rs  db_actions.rs  mod.rs  solution_db_actions.rs  solution_service.rs  ws_server.rs  ws_session.rs
