[package]
name = "cooperative-crosswords"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-web = "4"
actix-web-actors = "4.2.0"
chrono = "0.4.24"
env_logger = "0.10.0"
futures = "0.3.28"
reqwest = "0.11"
scraper = "0.16.0"
r2d2 = "0.8.10"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "chrono", "serde_json"] }
dotenv = "0.15.0"
uuid = { version = "1.3.2", features = ["v4", "serde"] }
